unpackaged/objects/ServiceCloudAssignmentRules__mdt.object
<CustomObject>
  <description>To assign cases created by the sales reps to the right queue based on Account Country and Product Group/Line TFUS-000003229</description>
  <fields>
    <fullName>AccountCountry__c</fullName>
    <description>Account Country Code</description>
    <label>Account Country</label>
    <length>100</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>AssignedQueue__c</fullName>
    <description>Assigned Queue Id</description>
    <label>Assigned Queue</label>
    <length>200</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>ProductGroup__c</fullName>
    <description>Product Group Values</description>
    <label>Product Group</label>
    <length>100</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>ProductLine__c</fullName>
    <description>Product Line Values</description>
    <label>Product Line</label>
    <length>100</length>
    <type>Text</type>
  </fields>
  <label>Service Cloud: Assignment Rule</label>
  <listViews>
    <fullName>AllFields</fullName>
    <columns>MasterLabel</columns>
    <columns>AccountCountry__c</columns>
    <columns>ProductGroup__c</columns>
    <columns>ProductLine__c</columns>
    <columns>AssignedQueue__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
    <language>en_US</language>
  </listViews>
  <pluralLabel>Service Cloud: Assignment Rules</pluralLabel>
</CustomObject>